# g2o_gnd

./: .gitignore  README.md  batch_visualizer.py  batch_visualizer2.py  bot0_observation_vtxs_refs.g2o  cauchy_cauchy_after.g2o  cauchy_cauchy_back_after.g2o  cauchy_cauchy_before.g2o  cauchy_gauss_after.g2o  cauchy_gauss_gt.g2o  debug.txt  file_trajectory_gt_bot0.g2o  file_trajectory_gt_bot1.g2o  file_trajectory_gt_bot2.g2o  file_trajectory_gt_bot3.g2o  file_trajectory_gt_bot4.g2o  file_trajectory_opt_bot0.g2o  file_trajectory_opt_bot1.g2o  file_trajectory_pre_comm_bot0.g2o  file_trajectory_pre_comm_bot1.g2o  file_trajectory_pre_opt_bot0.g2o  gt_log.txt  gt_log_0.txt  gt_log_1.txt  gt_log_2.txt  gt_log_3.txt  gt_log_4.txt  msg_log.txt  msg_log_0.txt  msg_log_1.txt  msg_log_2.txt  msg_log_3.txt  msg_log_4.txt  paths.npz  samplerTest.py  tmp.txt  tmp_data_processor.py  trajectories.json  trajectory_before.g2o  trajectory_est.g2o  (+14 more)
Scripts/: Build_Source.sh  Build_ThirdParty.sh
Source/: CMakeLists.txt
Source/Examples/: CMakeLists.txt
Source/Examples/Multidrone_slam/: CMakeLists.txt  batch_experiment.cpp  experiment.cpp
Source/Examples/Multidrone_slam/config/: batch_experiment_config.json  experiment_base_config.json  slam_system_config.json  topology.json  view_config.json
Source/Examples/Tutorial_slam2d/: CMakeLists.txt  cauchy_edge_validity_test.cpp  cauchy_edge_validity_test2.cpp  cauchy_edge_validity_test3.cpp  incsim_test.cpp  multibot_full_graph.cpp  multirobot_concept_test.cpp  multirobot_incsim_test.cpp  simulator_config.json  slam_system_config.json  tutorial_slam2d.cpp  tutorial_w_bearing.cpp  view_config.json
Source/Examples/Tutorial_slam2d/multirobot_configs/: bot0_view.json  bot1_view.json  bot2_view.json  overall_view.json
Source/Examples/Tutorial_slam2d/multirobot_view_configs/: bot0.json  bot1.json  bot3.json  bot4.json  overall.json
Source/Examples/UTISA_slam/: CMakeLists.txt  batch_experiment.cpp  experiment.cpp
Source/Examples/UTISA_slam/config/: batch_experiment_config.json  experiment_base_config.json  slam_system_config.json  topology.json  view_config.json
Source/Libraries/: CMakeLists.txt
Source/Libraries/GND_SLAM/: CMakeLists.txt
Source/Libraries/GND_SLAM/G2O_Graph/: CMakeLists.txt  edge_platform_bearing_prior.cpp  edge_platform_bearing_prior.h  edge_platform_loc_prior.cpp  edge_platform_loc_prior.h  edge_platform_loc_prior_gnd.cpp  edge_platform_loc_prior_gnd.h  edge_platform_pose_prior.cpp  edge_platform_pose_prior.h  edge_range_bearing.cpp  edge_range_bearing.h  edge_se2_wt.cpp  edge_se2_wt.h  se2.h  types_tutorial_slam2d.cpp  types_tutorial_slam2d.h  vertex_platform.cpp  vertex_platform.h
Source/Libraries/GND_SLAM/G2O_Graph/GNDEdges/: cauchy_edge_se2_pointxy.cpp  cauchy_edge_se2_pointxy.h  edge_none_gaussian_binary.h  edge_none_gaussian_unary.h  edge_platform_loc_prior_gnd.cpp  edge_platform_loc_prior_gnd.h  edge_platform_pose_prior_gnd.cpp  edge_platform_pose_prior_gnd.h  gnd_kernel.cpp  gnd_kernel.h
Source/Libraries/GND_SLAM/Incremental_Simulator/: CMakeLists.txt  events.h  file_simulator.cpp  file_simulator.cpp.hide  file_simulator.h  file_simulator.h.hide  file_slam_system.cpp  file_slam_system.h  incremental_simulator.cpp  incremental_simulator.h  ordered_event_queue.hpp  platform_controller.cpp  platform_controller.h  sensor_data.h  slam_system.cpp  slam_system.cpp.bak  slam_system.cpp.bak2  slam_system.h  slam_system.h.bak  slam_system.h.bak2  slam_system_base.h  slam_system_ffile.cpp.hide  slam_system_ffile.h.hide  system_model.cpp  system_model.h
Source/Libraries/GND_SLAM/Multidrone_Simulator/: CMakeLists.txt  agent_manager.cpp  agent_manager.h  data_based_simulation.cpp  data_based_simulation.h  drone_slam_system.cpp  drone_slam_system.h  md_events.h  messages.hpp  stamp_map.hpp
Source/Libraries/GND_SLAM/Multirobot_Simulator/: Plan.txt
Source/Libraries/GND_SLAM/Oneshot_Simulator/: CMakeLists.txt  rng_util.h  simulator.cpp  simulator.h  simulator_mc.cpp  simulator_mc.h
Source/Libraries/GND_SLAM/UTISA_Simulator/: CMakeLists.txt  utisa_agent_manager.cpp  utisa_agent_manager.h  utisa_events.h  utisa_messages.hpp  utisa_simulation.cpp  utisa_simulation.h  utisa_simulator_api.h  utisa_slam_system.cpp  utisa_slam_system.h  utisa_stamp_map.hpp
Source/Libraries/GND_SLAM/visualizer/: CMakeLists.txt  data_based_simulation_view.cpp  data_based_simulation_view.h  file_simulator_view.cpp  file_simulator_view.h  file_slam_system_view.cpp  file_slam_system_view.h  multi_drone_slam_system_view.cpp  multi_drone_slam_system_view.h  simulator_view.cpp  simulator_view.h  slam_system_view.cpp  slam_system_view.h  utisa_example_views.cpp  utisa_example_views.h  view.cpp  view.h  view_manager.cpp  view_manager.h  view_manager_3d.cpp  view_manager_3d.h  visualizer.cpp  visualizer.h  viz_shape.h
config/: trajectories.json
gnd_test_results_0/: ape_results.pkl
gnd_test_results_0/test_0/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_1/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_10/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_11/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_12/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_13/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_14/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_15/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_16/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_17/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_18/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_19/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_2/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_20/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
gnd_test_results_0/test_21/: twb_gauss.g2o  twb_gnd.g2o  twb_gt.g2o
test1_2_data/: connector.g2o
test1_data/: connector.g2o
test1_new_data/: connector.g2o  test1_new.g2o  test1_new_modified.g2o
(+120 files in other folders)
